// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game over inline render 1`] = `
<div
  className="Receptacle box"
  style={
    Object {
      "display": "inline-block",
      "height": "88px",
      "position": "static",
      "width": "67px",
    }
  }
>
  10
</div>
`;

exports[`Initial render as box 1`] = `
<div
  className="Receptacle box"
  style={
    Object {
      "bottom": "10px",
      "height": "88px",
      "left": "448px",
      "width": "67px",
    }
  }
>
  10
</div>
`;

exports[`Initial render as trash 1`] = `
<div
  className="Receptacle trash"
  style={
    Object {
      "bottom": "10px",
      "height": "100px",
      "left": "10px",
      "width": "71px",
    }
  }
>
  5
</div>
`;
